--- a/AdventOfCode2022/Day1/challenge.html
+++ b/AdventOfCode2022/Day1/challenge.html
@@ -1,4 +1,4 @@
-﻿<link rel="stylesheet" type="text/css" href="../js/style.css?30" />
+﻿<link rel="stylesheet" type="text/css" href="../css/style.css?30" />
 <article class="day-desc">
     <h2>--- Day 1: Calorie Counting ---</h2><p>Santa's reindeer typically eat regular reindeer food, but they need a lot of <a href="/2018/day/25">magical energy</a> to deliver presents on Christmas. For that, their favorite snack is a special type of <em class="star">star</em> fruit that only grows deep in the jungle. The Elves have brought you on their annual expedition to the grove where the fruit grows.</p>
     <p>To supply enough magical energy, the expedition needs to retrieve a minimum of <em class="star">fifty stars</em> by December 25th. Although the Elves assure you that the grove has plenty of fruit, you decide to grab any fruit you see along the way, just in case.</p>
